--- a/main.tex
+++ b/main.tex
@@ -593,7 +593,7 @@ But this gives a contradiction since using equation \eqref{eq:near_positive} for
 
 With our heuristic motivation to hand, we move on to show that blow up of bounded solutions, if it occurs at all, must occur at the origin. This is a straight forward application of standard estimates \cite[Theorem 10.1]{Ladyzhenskaja:/1967} but we record the details in the following lemma for convenience.
 
-{\color{red} Might need to clarify norms here. They probably should be pointwise in \(t\)}
+{\color{red} Might need to clarify norms here. They probably should be spatial norms and we take a sup over t. Also $L^{\infty}$ bounds might follow from parabolic theory and bounds on the initial data.}
 
 \begin{lemma}
 \label{lem:apriori_bounds}
