Reworded part of intro about r = 0 being a fixed point causesblow up.

--- a/main.tex
+++ b/main.tex
@@ -124,9 +124,11 @@ p(\beta) = \beta^2 - F'(0)
 with roots \(\beta_{\pm} = \pm \sqrt{F'(0)}\). Degree one harmonic map heat flow has \(\beta_+ = 1\) and blow up occurs. More generally, degree \(\ell\) harmonic map heat flow has \(\beta_+ = \ell\) which does not blow up for \(\ell \geq 2\) and finally, Yang-Mills has \(\beta_+ = 2\) once more without blow up.
 \end{rem}
 
+Our interpretation is that the harmonic map heat flow, equation \eqref{eq:pde} is the harmonic map heat flow from a flat disc \(D^2\) into a warped product that is also invariant under the action of \(\S^1\) on both source and target. The coefficients \(1/r, 1/r^2\) are singular precisely at the fixed point \(r = 0\) and standard parabolic estimates (see \Cref{lem:apriori_bounds} below) ensure that blow up, if it occurs at all, must occur around this fixed point. Note that the other fixed point of \(\S^2\) (i.e. \(r=a\)) behaves qualitatively different as there is no corresponding fixed point of \(D^2\), but does feature in the theorems through the \(a\) dependence of the \(L_{\infty}\) bounds. The reason the linearised operator \(L\) determines blow up is because \(F'(0)\) dominates as \(\psi \to 0\) which occurs as \(r \to 0\) via the boundary condition \(\psi(0) = 0\); that is via the condition that this point is fixed under the action of \(\S^1\) on both source and target.
+
+
 The method of proof - as used by many authors \cite{MR2332425,MR1180392} - proceeds by suitable construction of sub and super solutions either forcing or preventing blow up. These are obtained from one-parameter families of stationary solutions \(\xi = \xi_{\lambda}\) satisfying \(L(\xi) = -\tfrac{1}{r^2} \bar{F} (\xi)\) and \(\xi(0) = 0\). Since \(L\) is second order, this leaves the free parameter \(\lambda\) specifying \(\xi'(0)\). By allowing this parameter to depend on \(t\) in just the right way, we obtain the desired sub and super solutions, \(\xi_{\lambda(t)} (r)\). Blow up then occurs (or not) according to the variation of \(\xi\) with respect to \(\lambda\) and whether \(\lambda\) blows up in finite time or not.
 
-The reason the linearised operator \(L\) determines blow up is because of standard local, parabolic estimates that show blow up, if it occurs, must occur at the pole \(r = 0\) (see Lemma \ref{lem:apriori_bounds}) coupled with the assumptions on \(F\) ensuring that \(\bar{F} = \mathcal{O}(\psi^{1+\alpha})\). Thus the linearisation \(F'(0)\) dominates as \(\psi \to 0\) which connects with the local estimates through boundary condition \(\psi(0) = 0\). Of course, there are technicalities encountered (as seen for instance in the boundary conditions and asymptotics assumed in \cref{thm:mainC1}) and these will be expanded upon below.
 
 \section{Energy and Gradient Flow}
 \label{subsec:intro_energygradient}
