Couple of minor typos.

--- a/main.tex
+++ b/main.tex
@@ -362,7 +362,7 @@ Then in fact \(\xi(r) = \tilde{\xi}(r^{\sqrt{F'(0)}})\) since letting \(s = r^{\
 
 Thus in fact it suffices to show
 \[
-\xi_{\lambda} (r) = \lambda r + \bigo(r^{1 + \epsilon}) \text{ as } r \to 0
+\xi_{\lambda} (r) = \lambda r + \bigo(r^{1 + \alpha}) \text{ as } r \to 0
 \]
 under the assumption \(F'(0) = 1\) (and also relabelling \(\lambda \mapsto \lambda^{1/\sqrt{F'(0)}}\) which doesn't affect the other required properties).
 
@@ -380,7 +380,7 @@ Then we have, letting \(z = H^{-1}(w)\),
 &= A (H^{-1}(w))^{1+\alpha}
 \end{split}
 \end{equation}
-for some \(A > 0\) and \(z \in [0, \epsilon]\) for some \(\epsilon > 0\), or equivalently for \(w \in (-\infty, M)\) for some \(M\). In particular
+for some \(A > 0\) and \(z \in [0, \epsilon)\) for some \(\epsilon > 0\), or equivalently for \(w \in (-\infty, M)\) for some \(M\). In particular
 \[
 \abs{H^{-1}(w) - e^w} \to 0 \text{ as } w \to -\infty
 \]
